--- a/index.html
+++ b/index.html
@@ -3,30 +3,158 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Postal Code Finder</title>
+    <title>GeoLeads Insights</title>
+    <style>
+      body {
+        font-family: "Arial", sans-serif;
+        background-color: #f5f5f5;
+        color: #333;
+        margin: 0;
+        padding: 0;
+      }
+
+      h1 {
+        text-align: center;
+        color: #009688;
+      }
+
+      h2 {
+        color: #009688;
+      }
+
+      textarea {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+
+      button {
+        background-color: #009688;
+        color: #fff;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      button:hover {
+        background-color: #00796b;
+      }
+
+      #loader {
+        display: none;
+        font-weight: bold;
+        color: #009688;
+      }
+
+      #pagination {
+        margin: 10px 0;
+        text-align: center;
+      }
+
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 10px;
+      }
+
+      th,
+      td {
+        padding: 10px;
+        border: 1px solid #ddd;
+        text-align: left;
+      }
+
+      th {
+        background-color: #009688;
+        color: #fff;
+      }
+
+      hr {
+        border: 0;
+        height: 1px;
+        background: #ddd;
+        margin: 10px 0;
+      }
+      .hero-section {
+        background: url("background-image.jpg") center/cover no-repeat;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        text-align: center;
+      }
+
+      .hero-content {
+        max-width: 600px;
+      }
+
+      .hero-section h1 {
+        font-size: 3em;
+        margin-bottom: 20px;
+        color: #fff;
+      }
+
+      p {
+        font-size: 1.2em;
+        margin-bottom: 30px;
+      }
+
+      .cta-button {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #3498db;
+        color: #fff;
+        text-decoration: none;
+        font-size: 1em;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+      }
+
+      .cta-button:hover {
+        background-color: #2980b9;
+      }
+    </style>
   </head>
   <body>
+    <div class="hero-section">
+      <div class="hero-content">
+        <h1>GeoLead Analytics</h1>
+        <p>
+          Unlock the Power of Postcode Analytics for Enhanced Marketing
+          Strategies
+        </p>
+        <a href="#contact" class="cta-button">Get Started</a>
+      </div>
+    </div>
     <h2>Paste Postal Codes Here (Separate them by spaces or new lines):</h2>
     <textarea id="postalCodesInput" rows="10" cols="50"></textarea><br />
     <button onclick="findPostalCodes()">Find Postal Codes</button>
+    <div id="loader" style="display: none">Loading.....</div>
     <div>
-        <h2>Results:</h2>
-        <table style="border: 1px solid black;">
-          <thead>
-            <tr>
-              <th>FSA</th>
-              <th>City</th>
-            </tr>
-          </thead>
-          <tbody id="results">
-          </tbody>
-        </table>
+      <h2>Results:</h2>
+      <button onclick="exportCSV()">Export CSV</button>
+      <hr />
+      <div id="pagination">
+        <button onclick="changePage(-1)">Previous</button>
+        <span>Page <span id="currentPage">1</span></span>
+        <button onclick="changePage(1)">Next</button>
+      </div>
+      <table id="individualResultsTable"></table>
     </div>
     <div>
-        <h2>Top 30:</h2>
-        <div id="fsaCountTable"></div>
+      <h2>Top 30:</h2>
+      <table id="fsaCountTable"></table>
     </div>
-    
+
+    <div>
+      <h2>Grouped data</h2>
+      <table id="groupedCityTable"></table>
+    </div>
 
     <script src="postalFSA.js"></script>
     <script src="app.js"></script>
