--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <div class="container">
       <h2>Paste Postal Codes Here (Separate them by spaces or new lines):</h2>
       <textarea id="postalCodesInput" rows="10" cols="50"></textarea><br />
-      <button onclick="analysePostCodes()">Find Postal Codes</button>
+      <button onclick="findPostalCodes()">Find Postal Codes</button>
       <div id="loader" style="display: none">Loading.....</div>
       <div id="results" style="display: none">
         <div>
@@ -164,7 +164,7 @@
         </div>
       </div>
     </div>
-    <!-- <script src="app.js"></script> -->
-    <script src="newapp.js"></script>
+    <script src="app.js"></script>
+    <!-- <script src="newapp.js"></script> -->
   </body>
 </html>
