--- a/new.html
+++ b/new.html
@@ -1,162 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>GeoLeads Insights</title>
-        <style>
-            body {
-                font-family: "Arial", sans-serif;
-                background-color: #f5f5f5;
-                color: #333;
-                margin: 0;
-                padding: 0;
-            }
 
-            h1 {
-                text-align: center;
-                color: #009688;
-            }
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GeoLeads Insights</title>
+    <style>
+        body {
+            font-family: "Arial", sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
 
-            h2 {
-                color: #009688;
-            }
+        h1 {
+            text-align: center;
+            color: #009688;
+        }
 
-            textarea {
-                width: 100%;
-                padding: 10px;
-                margin: 10px 0;
-                box-sizing: border-box;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-            }
+        h2 {
+            color: #009688;
+        }
 
-            button {
-                background-color: #009688;
-                color: #fff;
-                padding: 10px 15px;
-                border: none;
-                border-radius: 5px;
-                cursor: pointer;
-            }
+        textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
 
-            button:hover {
-                background-color: #00796b;
-            }
+        button {
+            background-color: #009688;
+            color: #fff;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
 
-            #loader {
-                display: none;
-                font-weight: bold;
-                color: #009688;
-            }
+        button:hover {
+            background-color: #00796b;
+        }
 
-            #pagination {
-                margin: 10px 0;
-                text-align: center;
-            }
+        #loader {
+            display: none;
+            font-weight: bold;
+            color: #009688;
+        }
 
-            table {
-                width: 100%;
-                border-collapse: collapse;
-                margin-top: 10px;
-            }
+        #pagination {
+            margin: 10px 0;
+            text-align: center;
+        }
 
-            th,
-            td {
-                padding: 10px;
-                border: 1px solid #ddd;
-                text-align: left;
-            }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 10px;
+        }
 
-            th {
-                background-color: #009688;
-                color: #fff;
-            }
+        th,
+        td {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: left;
+        }
 
-            hr {
-                border: 0;
-                height: 1px;
-                background: #ddd;
-                margin: 10px 0;
-            }
-            .hero-section {
-                background: url("background-image.jpg") center/cover no-repeat;
-                height: 100vh;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                color: #fff;
-                text-align: center;
-            }
+        th {
+            background-color: #009688;
+            color: #fff;
+        }
 
-            .hero-content {
-                max-width: 600px;
-            }
+        hr {
+            border: 0;
+            height: 1px;
+            background: #ddd;
+            margin: 10px 0;
+        }
 
-            .hero-section h1 {
-                font-size: 3em;
-                margin-bottom: 20px;
-                color: #fff;
-            }
+        .hero-section {
+            background: url("background-image.jpg") center/cover no-repeat;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            text-align: center;
+        }
 
-            p {
-                font-size: 1.2em;
-                margin-bottom: 30px;
-            }
+        .hero-content {
+            max-width: 600px;
+        }
 
-            .cta-button {
-                display: inline-block;
-                padding: 10px 20px;
-                background-color: #3498db;
-                color: #fff;
-                text-decoration: none;
-                font-size: 1em;
-                border-radius: 5px;
-                transition: background-color 0.3s ease;
-            }
+        .hero-section h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+            color: #fff;
+        }
 
-            .cta-button:hover {
-                background-color: #2980b9;
-            }
-            .container {
-                width: 100%;
-                max-width: 1200px;
-                margin: 30px auto;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="hero-section">
-            <div class="hero-content">
-                <h1>GeoLead Analytics</h1>
-                <p>Unlock the Power of Postcode Analytics for Enhanced Marketing Strategies</p>
-                <a href="#contact" class="cta-button">Get Started</a>
+        p {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+        }
+
+        .cta-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: #fff;
+            text-decoration: none;
+            font-size: 1em;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .cta-button:hover {
+            background-color: #2980b9;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 1200px;
+            margin: 30px auto;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="hero-section">
+        <div class="hero-content">
+            <h1>GeoLead Analytics</h1>
+            <p>Unlock the Power of Postcode Analytics for Enhanced Marketing Strategies</p>
+            <a href="#contact" class="cta-button">Get Started</a>
+        </div>
+    </div>
+    <div class="container">
+        <h2>Paste Postal Codes Here (Separate them by spaces or new lines):</h2>
+        <textarea id="postalCodesInput" rows="10" cols="50"></textarea>
+        <br />
+        <button onclick="getFSAData()">Find Postal Codes</button>
+        <div id="loader" style="display: none">Loading.....</div>
+
+
+        <div id="results">
+
+            <div>
+                <h2>Top 30:</h2>
+                <button onclick="exportTopThirty()">Export CSV (Top 30 FSAs)</button>
+                <table id="fsaCountTable"></table>
+            </div>
+
+            <div>
+                <h2>Grouped data</h2>
+                <button onclick="exportByCities()">Export CSV (Group by Cities)</button>
+                <table id="groupedCityTable"></table>
             </div>
         </div>
-        <div class="container">
-            <h2>Paste Postal Codes Here (Separate them by spaces or new lines):</h2>
-            <textarea id="postalCodesInput" rows="10" cols="50"></textarea>
-            <br />
-            <button onclick="findPostalCodes()">Find Postal Codes</button>
-            <div id="loader" style="display: none">Loading.....</div>
+    </div>
+    <script src="newapp.js"></script>
+    <!-- <script src="newapp.js"></script> -->
+</body>
 
-
-            <div id="results" style="display: none">
-
-                <div>
-                    <h2>Top 30:</h2>
-                    <button onclick="exportTopThirty()">Export CSV (Top 30 FSAs)</button>
-                    <table id="fsaCountTable"></table>
-                </div>
-
-                <div>
-                    <h2>Grouped data</h2>
-                    <button onclick="exportByCities()">Export CSV (Group by Cities)</button>
-                    <table id="groupedCityTable"></table>
-                </div>
-            </div>
-        </div>
-        <script src="newapp.js" type="module"></script>
-        <!-- <script src="newapp.js"></script> -->
-    </body>
 </html>
